--- a/src/main/webapp/Styles.css
+++ b/src/main/webapp/Styles.css
@@ -14,3 +14,44 @@ nav {
     border: 2px;
     float: right;
 }
+
+
+table {
+    text-align: right;
+    float : left;
+}
+tr{
+    margin-bottom: 10px;
+}
+article{
+    float: left;
+    margin-top: 30px;
+}
+.footer {
+    float: left;
+    position: fixed;
+}
+
+#pbody{
+    float: left;
+}
+td{
+    text-align: right;
+}
+//td.display{
+    //font-style: italic;
+    //font-weight: bold;
+//}
+#piclinks{
+    font-family: sans-serif;
+    font-size: 10px !important;
+    font-weight: bold;
+    padding-bottom: 10px;
+    margin-bottom: 6px;
+    margin-top: 2px;
+    
+}
+#msg{
+    font-style: italic ;
+    color: red;
+}
